name:                frecords
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/timjb/frecords#readme
license:             BSD3
license-file:        LICENSE
author:              Tim Baumann
maintainer:          tim@timbaumann.info
copyright:           MIT License
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    FRecords,
    FRecords.Classes,
    FRecords.Combinators,
    FRecords.TH
  build-depends:
    base >= 4.7 && < 5,
    template-haskell
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite frecord-th
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             templates.hs
  build-depends:
    base,
    frecords,
    template-haskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/timjb/frecords
