name: dtypes-optparse-applicative
version: 0.1.0.0
synopsis: example for using optparse-applicative together with dtypes
homepage: https://github.com/timjb/dtypes/tree/master/examples/dtypes-optparse-applicative
license: MIT
license-file: LICENSE
author: Tim Baumann
maintainer: tim@timbaumann.info
build-type: Simple
cabal-version: >= 1.10

executable dtypes-optparse-applicative
  main-is: Main.hs
  build-depends:
    base,
    optparse-applicative,
    dtypes
  hs-source-dirs: .
  default-language: Haskell2010