name: ftypes-aeson
version: 0.1.0.0
synopsis: example for parsing JSON using aeson together with ftypes
homepage: https://github.com/timjb/ftypes/tree/master/examples/ftypes-aeson
license: MIT
license-file: LICENSE
author: Tim Baumann
maintainer: tim@timbaumann.info
build-type: Simple
cabal-version: >= 1.10

library
  exposed-modules:
    JSONFormat
    GithubUser
  build-depends:
    base,
    ftypes,
    aeson,
    text
  hs-source-dirs: .
  default-language: Haskell2010