name: ftypes-optparse-applicative
version: 0.1.0.0
synopsis: example for using optparse-applicative together with ftypes
homepage: https://github.com/timjb/ftypes/tree/master/examples/ftypes-optparse-applicative
license: MIT
license-file: LICENSE
author: Tim Baumann
maintainer: tim@timbaumann.info
build-type: Simple
cabal-version: >= 1.10

executable ftypes-optparse-applicative
  main-is: Main.hs
  build-depends:
    base,
    optparse-applicative,
    ftypes
  hs-source-dirs: .
  default-language: Haskell2010